tests/paczka1/small_fuzzy/15816883.err
Error in line 1: Kpmq S76 9,7
Error in line 7: S77 S932 88,8
Error in line 5: Kpmq S932 55,7
Error in line 14: Kpmq S77 9,1
Error in line 11: S77 S76 71,7
